# strusAll

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  INSTALL.OSX  INSTALL.Ubuntu.md  ISSUES  README
cmake/: CheckCXX11Features.cmake  build_rules.cmake  link_rules.cmake
