cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

# must be done BEFORE project in order to work!
include(cmake/install_prefix.cmake)

set( CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" )
include( cmake/cxx11.cmake )
check_for_cxx11_compiler( HAVE_CXX11 )
include( cmake/dist.cmake )
include( cmake/LinuxDistribution.cmake )
include( cmake/build_rules.cmake )
include( cmake/boost.cmake )
include( cmake/intl.cmake )
include( cmake/find_strus_package.cmake )
include( cmake/find_tre.cmake )
include( cmake/find_leveldb.cmake )
include( cmake/link_rules.cmake )
find_package( Threads )

set( STRUS_ALL 1 )

set( strusbase_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/strusBase/include )
set( strusbase_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/strusBase )
set( strus_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/strus/include )
set( strus_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/strus )
set( strusanalyzer_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/strusAnalyzer/include )
set( strusanalyzer_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/strusAnalyzer )
set( strustrace_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/strusTrace/include )
set( strustrace_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/strusTrace )
set( strusmodule_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/strusModule/include )
set( strusmodule_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/strusModule )
set( strusrpc_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/strusRpc/include )
set( strusrpc_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/strusRpc )

enable_testing( )

include( cmake/report_build_settings.cmake )

add_subdirectory( strusBase )
add_subdirectory( strus )
add_subdirectory( strusAnalyzer )
add_subdirectory( strusTrace )
add_subdirectory( strusModule )
if(WITH_STRUS_VECTOR STREQUAL "YES")
	set( STRUS_MODULE_PATH "${STRUS_MODULE_PATH}:${PROJECT_BINARY_DIR}/strusVector/src" )
	set( strusvector_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/strusVector/include )
        set( strusvector_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/strusVector )
	add_subdirectory( strusVector )
	set( STRUS_VECTOR_BINARY_DIR "${PROJECT_BINARY_DIR}/strusVector/src" )
endif()
if(WITH_STRUS_PATTERN STREQUAL "YES")
	set( STRUS_MODULE_PATH "${STRUS_MODULE_PATH}:${PROJECT_BINARY_DIR}/strusPattern/src" )
        set( struspattern_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/strusPattern/include )
        set( struspattern_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/strusPattern )
        add_subdirectory( strusPattern )
	set( STRUS_PATTERN_BINARY_DIR "${PROJECT_BINARY_DIR}/strusPattern/src" )
endif()
add_subdirectory( strusRpc )
add_subdirectory( strusUtilities )
# temporarily disabled
add_subdirectory( strusBindings )

